--- a/trunk/SquirrelAdventures/SquirrelAdventures/SquirrelAdventures/SquirrelAdventures.csproj
+++ b/trunk/SquirrelAdventures/SquirrelAdventures/SquirrelAdventures/SquirrelAdventures.csproj
@@ -13,7 +13,7 @@
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XnaProfile>HiDef</XnaProfile>
+    <XnaProfile>Reach</XnaProfile>
     <XnaCrossPlatformGroupID>74579b29-7a38-4506-a15a-4c9fbb7f1f45</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
@@ -107,11 +107,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bola.cs" />
+    <Compile Include="Mensagem.cs" />
     <Compile Include="Objeto.cs" />
     <Compile Include="Personagem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="TelaAjuda.cs" />
+    <Compile Include="TelaCreditos.cs" />
+    <Compile Include="TelaMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
